# PclCSharp

./: .gitignore  CMakeLists.txt  README.md  build.ps1  pack.ps1
.github/workflows/: build.yml  publish.yml
demo/PclCSharpDemo/: CsharpPclText.sln  CsharpPclText.slnx
demo/PclCSharpDemo/FilterDemo/: FilterDemo.csproj
demo/PclCSharpDemo/FilterDemo/Properties/: Resources.Designer.cs  Settings.Designer.cs
demo/PclCSharpDemo/IoDemo/: IoDemo.csproj
demo/PclCSharpDemo/IoDemo/Properties/: Resources.Designer.cs  Settings.Designer.cs
demo/PclCSharpDemo/SegDemo/: SegDemo.csproj
demo/PclCSharpDemo/SegDemo/Properties/: Resources.Designer.cs  Settings.Designer.cs
demo/PclCSharpDemo/WpfHelixDemo/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  WpfHelixDemo.csproj
doc/: FuncDocOfPclCSharp.md
src/PclSharpWrapper/: PclRelease.props  PclSharpWrapper.sln  PclSharpWrapper.slnx
src/PclSharpWrapper/PclCSharp/: PclCSharp.csproj
src/PclSharpWrapper/PclSharpWrapper/: CMakeLists.txt  PclSharpWrapper.vcxproj  io.cpp  io.h  pcl_util.h  sampleConsensus.cpp  sampleConsensus.h  util_module.cpp
src/PclSharpWrapper/PointCloudDll/: CMakeLists.txt  PointCloudDll.vcxproj
src/PclSharpWrapper/PointCloudSharpDll/: PointCloudSharpDll.csproj
